crates/pg_syntax/tests/snapshots/postgres_regress/float8@158.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create cast (float8 as xfloat8) without function;
---
CreateCastStmt@0..49
  Create@0..6 "create"
  Whitespace@6..7 " "
  Cast@7..11 "cast"
  Whitespace@11..12 " "
  Ascii40@12..13 "("
  TypeName@13..19
    Ident@13..19 "float8"
  Whitespace@19..20 " "
  As@20..22 "as"
  Whitespace@22..23 " "
  TypeName@23..30
    Ident@23..30 "xfloat8"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  Without@32..39 "without"
  Whitespace@39..40 " "
  Function@40..48 "function"
  Ascii59@48..49 ";"

