crates/pg_syntax/tests/snapshots/postgres_regress/float8@159.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create cast (xfloat8 as bigint) without function;
---
CreateCastStmt@0..49
  Create@0..6 "create"
  Whitespace@6..7 " "
  Cast@7..11 "cast"
  Whitespace@11..12 " "
  Ascii40@12..13 "("
  TypeName@13..20
    Ident@13..20 "xfloat8"
  Whitespace@20..21 " "
  As@21..23 "as"
  Whitespace@23..24 " "
  TypeName@24..30
    Bigint@24..30 "bigint"
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  Without@32..39 "without"
  Whitespace@39..40 " "
  Function@40..48 "function"
  Ascii59@48..49 ";"

